HTML Sections and content with TODOs

--- a/index.html
+++ b/index.html
@@ -3,9 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CO₂ Monitor</title>
 </head>
 <body>
-    
+    <header>
+        <img scr="" alt="logo"> <!--TODO Logo einfügen-->
+        <nav>
+            <ul>
+                <li>CO₂ Emissionsdaten</li> <!--TODO Links zu Sektion einbauen-->
+                <li>Über uns</li> <!--TODO Links zu Sektion einbauen-->
+                <li>Kontakt</li> <!--TODO Links zu Sektion einbauen-->
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="home">
+            <img src="" alt="hintergrundbild"> <!--TODO Hintergrundbild einfügen-->
+            <h1>CO₂ EMISSIONS DATEN</h1>
+            <h3>Transparenz für den Klimawandel</h3>
+            <button><img src="" alt="scroll down"></button> <!--TODO Pfeil Bild einfügen-->
+        </section>
+
+        <section id="intro">
+            <h3>Einführung in den Klimawandel & die Bedeutung von CO2-Emissionen.</h3>
+            <p>Der Klimawandel zählt zu den größten Herausforderungen unserer Zeit. Er wird maßgeblich durch den Anstieg von Treibhausgasen wie Kohlendioxid (CO2) in der Atmosphäre verursacht, die vor allem durch die Verbrennung fossiler Brennstoffe, industrielle Prozesse und Abholzung freigesetzt werden. Diese Emissionen verstärken den Treibhauseffekt und führen zu steigenden Temperaturen, extremeren Wetterereignissen und weitreichenden ökologischen sowie wirtschaftlichen Folgen. Transparente Informationen über CO2-Emissionen sind entscheidend, um verantwortungsbewusstes Handeln auf individueller, unternehmerischer und politischer Ebene zu fördern. Unsere Plattform macht diese Daten zugänglich und unterstützt damit nachhaltige Entscheidungen für eine klimafreundliche Zukunft.</p>
+        </section>
+
+        <section id="table">
+            <h3>CO₂-Emissionsdaten weltweit</h3>
+            <h6>Fiktive CO₂-Emissionsdaten nach Land und Unternehmen</h6>
+            <!--Suchfunktion der Tablle einbauen-->
+            <!--Filterfunktion nach Ländern der Tablle einbauen-->
+            <!--Filterfunktion nach Unternehmen der Tablle einbauen-->
+            <!--Tablle einbauen-->
+        </section>
+
+        <section id="about">
+            <h3>Über uns</h3>
+            <img src="" alt="landscape image snowy forest"> <!--Bild einfügen-->
+            <p>CO₂Monitor ist eine unabhängige Non-Profit-Organisation, die sich für mehr Transparenz bei CO₂-Emissionen einsetzt. Der Klimawandel ist eine der größten Herausforderungen unserer Zeit, doch oft fehlt es an klaren und zugänglichen Informationen darüber, welche Länder und Unternehmen wie viel CO₂ ausstoßen. Genau hier setzt CO₂Monitor an: Unsere Plattform stellt umfassende und verlässliche Daten bereit, die es ermöglichen, Emissionen gezielt zu analysieren und nachzuvollziehen. Durch interaktive Visualisierungen, Filtermöglichkeiten und Vergleichsfunktionen bieten wir eine transparente Grundlage für Wissenschaftler, Aktivisten, Unternehmen und politische Entscheidungsträger. Unser Ziel ist es, das Bewusstsein für klimaschädliche Emissionen zu schärfen und den Wandel hin zu nachhaltigeren Wirtschafts- und Lebensweisen aktiv zu fördern. Wir glauben, dass Wissen der erste Schritt zur Veränderung ist – deshalb setzen wir auf offene Daten, verständliche Aufbereitung und eine benutzerfreundliche Plattform, die es jedem ermöglicht, sich mit den realen Zahlen und Fakten des Klimawandels auseinanderzusetzen.</p>
+        </section>
+
+        <section id="contact"> 
+            <h3>Kontaktiere uns hier</h3>
+            <!--Kontaktformular einbauen-->
+            <img src="" alt="landscape image snowy mountain"> <!--Bild einfügen-->
+        </section>
+    </main>
+
+    <footer>
+        <img scr="" alt="logo"> <!--TODO Logo einfügen-->
+        <p>E-Mail: co2-monitor@gmail.com</p>
+        <p>Telefon: +49 123 4567890</p>
+        <img src="" alt="Instagram Link"> <!--TODO Instagram Icon einfügen / Link zu 404 einfügen-->
+        <img src="" alt="TikTok Link"> <!--TODO TikTok Icon einfügen / Link zu 404 einfügen-->
+        <img src="" alt="X Link"> <!--TODO X Icon einfügen / Link zu 404 einfügen-->
+        <a href="">Datenschutzrichtlinien</a> <!--Link zu 404 einfügen-->
+        <a href="">Impressum</a> <!--Link zu 404 einfügen-->
+        <a href="">Nutzungsbedingungen</a> <!--Link zu 404 einfügen-->
+    </footer>
 </body>
 </html>
