HTML table/form/images

--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
 </head>
 <body>
     <header>
-        <img scr="" alt="logo"> <!--TODO Logo einfügen-->
+        <img scr="./images/Logo_weiß.png" alt="logo"> <!--TODO Logo einfügen funktioniert nicht-->
         <nav>
             <ul>
-                <li>CO₂ Emissionsdaten</li> <!--TODO Links zu Sektion einbauen-->
-                <li>Über uns</li> <!--TODO Links zu Sektion einbauen-->
-                <li>Kontakt</li> <!--TODO Links zu Sektion einbauen-->
+                <li><a href="#table">CO₂ Emissionsdaten</a></li>
+                <li><a href="#about">Über uns</a></li>
+                <li><a href="#contact">Kontakt</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section id="home">
-            <img src="" alt="hintergrundbild"> <!--TODO Hintergrundbild einfügen-->
+            <img src="./images/michael-milverton-Le4yqbCMoJo-unsplash.jpg" alt="hintergrundbild">
             <h1>CO₂ EMISSIONS DATEN</h1>
             <h3>Transparenz für den Klimawandel</h3>
-            <button><img src="" alt="scroll down"></button> <!--TODO Pfeil Bild einfügen-->
+            <button><img src="./images/arrow_down_white.png" alt="scroll down"></button>
         </section>
 
         <section id="intro">
@@ -33,32 +33,156 @@
         <section id="table">
             <h3>CO₂-Emissionsdaten weltweit</h3>
             <h6>Fiktive CO₂-Emissionsdaten nach Land und Unternehmen</h6>
-            <!--Suchfunktion der Tablle einbauen-->
-            <!--Filterfunktion nach Ländern der Tablle einbauen-->
-            <!--Filterfunktion nach Unternehmen der Tablle einbauen-->
-            <!--Tablle einbauen-->
+            <!--JavaScript TODO Suchfunktion der Tablle einbauen-->
+            <!--JavaScript TODO Filterfunktion nach Ländern der Tablle einbauen-->
+            <!--JavaScript TODO Filterfunktion nach Unternehmen der Tablle einbauen-->
+            <table>
+                <thead>
+                    <tr>
+                        <th>Land</th>
+                        <th>Unternehmen</th>
+                        <th>CO₂-Emissionen (Tonnen)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Deutschland</td>
+                        <td>Energo GmbH</td>
+                        <td>5.200</td>
+                    </tr>
+                    <tr>
+                        <td>Deutschland</td>
+                        <td>GreenTech AG</td>
+                        <td>3.800</td>
+                    </tr>
+                    <tr>
+                        <td>Deutschland</td>
+                        <td>Stahlwerke Müller</td>
+                        <td>7.500</td>
+                    </tr>
+                    <tr>
+                        <td>USA</td>
+                        <td>CarbonCorp Inc.</td>
+                        <td>15.200</td>
+                    </tr>
+                    <tr>
+                        <td>USA</td>
+                        <td>TexOil Ltd.</td>
+                        <td>18.300</td>
+                    </tr>
+                    <tr>
+                        <td>USA</td>
+                        <td>FuturePower LLC</td>
+                        <td>12.100</td>
+                    </tr>
+                    <tr>
+                        <td>China</td>
+                        <td>SinoSteel Group</td>
+                        <td>25.400</td>
+                    </tr>
+                    <tr>
+                        <td>China</td>
+                        <td>MegaEnergy Co.</td>
+                        <td>30.200</td>
+                    </tr>
+                    <tr>
+                        <td>China</td>
+                        <td>GreenCoal Ltd.</td>
+                        <td>22.500</td>
+                    </tr>
+                    <tr>
+                        <td>Frakreich</td>
+                        <td>EnergiePlus SA</td>
+                        <td>6.400</td>
+                    </tr>
+                    <tr>
+                        <td>Frankreich</td>
+                        <td>AutoManufacture FR</td>
+                        <td>8.100</td>
+                    </tr>
+                    <tr>
+                        <td>Frankreich</td>
+                        <td>BlueSteel SAS</td>
+                        <td>5.900</td>
+                    </tr>
+                    <tr>
+                        <td>Indien</td>
+                        <td>BharatPower Ltd.</td>
+                        <td>20.500</td>
+                    </tr>
+                    <tr>
+                        <td>Indien</td>
+                        <td>Mumbai Industries</td>
+                        <td>14.800</td>
+                    </tr>
+                    <tr>
+                        <td>Indien</td>
+                        <td>EcoFuel Pvt.</td>
+                        <td>17.300</td>
+                    </tr>
+                    <tr>
+                        <td>Brasilien</td>
+                        <td>Amazon Energy</td>
+                        <td>9.700</td>
+                    </tr>
+                    <tr>
+                        <td>Brasilien</td>
+                        <td>SãoPaulo Steel</td>
+                        <td>11.200</td>
+                    </tr>
+                    <tr>
+                        <td>Brasilien</td>
+                        <td>Green Rio S.A.</td>
+                        <td>11.200</td>
+                    </tr>
+                    <tr>
+                        <td>Australien</td>
+                        <td>Pacific Mining Ltd.</td>
+                        <td>13.400</td>
+                    </tr>
+                    <tr>
+                        <td>Australien</td>
+                        <td>Eco Coal Pty.</td>
+                        <td>10.200</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
 
         <section id="about">
             <h3>Über uns</h3>
-            <img src="" alt="landscape image snowy forest"> <!--Bild einfügen-->
+            <img src="./images/photo-nic-RmZIUIF2S2Q-unsplash.jpg" alt="landscape image snowy forest">
             <p>CO₂Monitor ist eine unabhängige Non-Profit-Organisation, die sich für mehr Transparenz bei CO₂-Emissionen einsetzt. Der Klimawandel ist eine der größten Herausforderungen unserer Zeit, doch oft fehlt es an klaren und zugänglichen Informationen darüber, welche Länder und Unternehmen wie viel CO₂ ausstoßen. Genau hier setzt CO₂Monitor an: Unsere Plattform stellt umfassende und verlässliche Daten bereit, die es ermöglichen, Emissionen gezielt zu analysieren und nachzuvollziehen. Durch interaktive Visualisierungen, Filtermöglichkeiten und Vergleichsfunktionen bieten wir eine transparente Grundlage für Wissenschaftler, Aktivisten, Unternehmen und politische Entscheidungsträger. Unser Ziel ist es, das Bewusstsein für klimaschädliche Emissionen zu schärfen und den Wandel hin zu nachhaltigeren Wirtschafts- und Lebensweisen aktiv zu fördern. Wir glauben, dass Wissen der erste Schritt zur Veränderung ist – deshalb setzen wir auf offene Daten, verständliche Aufbereitung und eine benutzerfreundliche Plattform, die es jedem ermöglicht, sich mit den realen Zahlen und Fakten des Klimawandels auseinanderzusetzen.</p>
         </section>
 
         <section id="contact"> 
             <h3>Kontaktiere uns hier</h3>
-            <!--Kontaktformular einbauen-->
-            <img src="" alt="landscape image snowy mountain"> <!--Bild einfügen-->
+            <form action="kontakt.php" method="post">
+                <label for="vorname">Vorname</label>
+                <input type="text" id="vorname" name="vorname" required>
+
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email">E-Mail</label>
+                <input type="text" id="email" name="email" required>
+
+                <label for="nachricht">Nachricht</label>
+                <input type="text" id="nachricht" name="nachricht" required>
+
+                <button type="submit">Senden</button>
+            </form>
+            <img src="./images/chris-lutke-VMJGmTuRVFs-unsplash.jpg" alt="landscape image snowy mountain">
         </section>
     </main>
 
     <footer>
-        <img scr="" alt="logo"> <!--TODO Logo einfügen-->
+        <img scr="./images/Logo_weiß.png" alt="logo"> <!--TODO Logo einfügen funktioniert nicht-->
         <p>E-Mail: co2-monitor@gmail.com</p>
         <p>Telefon: +49 123 4567890</p>
-        <img src="" alt="Instagram Link"> <!--TODO Instagram Icon einfügen / Link zu 404 einfügen-->
-        <img src="" alt="TikTok Link"> <!--TODO TikTok Icon einfügen / Link zu 404 einfügen-->
-        <img src="" alt="X Link"> <!--TODO X Icon einfügen / Link zu 404 einfügen-->
+        <img src="./images/instagram.png" alt="Instagram Link"> <!--TODO Link zu 404 einfügen-->
+        <img src="./images/tik-tok.png" alt="TikTok Link"> <!--TODO Link zu 404 einfügen-->
+        <img src="./images/x.png" alt="X Link"> <!--TODO Link zu 404 einfügen-->
         <a href="">Datenschutzrichtlinien</a> <!--Link zu 404 einfügen-->
         <a href="">Impressum</a> <!--Link zu 404 einfügen-->
         <a href="">Nutzungsbedingungen</a> <!--Link zu 404 einfügen-->
