HTML: Impressum / Datenschutzrichtlinien / Nutzungsbedinugungen

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <img scr="./images/Logo_weiß.png" alt="logo"> <!--TODO Logo einfügen funktioniert nicht-->
+        <img src="./images/logo_weiss.png" alt="logo">
         <nav>
             <ul>
                 <li><a href="#table">CO₂ Emissionsdaten</a></li>
@@ -157,7 +157,7 @@
 
         <section id="contact"> 
             <h3>Kontaktiere uns hier</h3>
-            <form action="kontakt.php" method="post">
+            <form action="kontakt.php" method="post"> <!--php entfernen recherchieren-->
                 <label for="vorname">Vorname</label>
                 <input type="text" id="vorname" name="vorname" required>
 
@@ -177,15 +177,15 @@
     </main>
 
     <footer>
-        <img scr="./images/Logo_weiß.png" alt="logo"> <!--TODO Logo einfügen funktioniert nicht-->
+        <img src="./images/logo_weiss.png" alt="logo">
         <p>E-Mail: co2-monitor@gmail.com</p>
         <p>Telefon: +49 123 4567890</p>
         <img src="./images/instagram.png" alt="Instagram Link"> <!--TODO Link zu 404 einfügen-->
         <img src="./images/tik-tok.png" alt="TikTok Link"> <!--TODO Link zu 404 einfügen-->
         <img src="./images/x.png" alt="X Link"> <!--TODO Link zu 404 einfügen-->
-        <a href="">Datenschutzrichtlinien</a> <!--Link zu 404 einfügen-->
-        <a href="">Impressum</a> <!--Link zu 404 einfügen-->
-        <a href="">Nutzungsbedingungen</a> <!--Link zu 404 einfügen-->
+        <a href="datenschutzrichtlinien.html">Datenschutzrichtlinien</a>
+        <a href="impressum.html">Impressum</a>
+        <a href="nutzungsbedingungen.html">Nutzungsbedingungen</a>
     </footer>
 </body>
 </html>
