--- a/nutzungsbedingungen.html
+++ b/nutzungsbedingungen.html
@@ -6,49 +6,68 @@
     <title>Nutzungsbedingungen</title>
 </head>
 <body>
-    <!--Header und Footer jeweils einbauen-->
+    <header>
+        <img src="./images/logo_weiss.png" alt="logo">
+        <button onclick="window.location.href='index.html';">Zurück zur Homepage</button>
+    </header>
 
-    <h1>Nutzungsbedingungen</h1>
+    <main>
+        <h1>Nutzungsbedingungen</h1>
 
-    <h3>1. Geltungsbereich</h3>
-    <p>Diese Nutzungsbedingungen regeln die Nutzung der Website CO₂ Monitor Non-Profit-Organisation (nachfolgend „Website“). Durch den Zugriff und die Nutzung der Website erklären Sie sich mit diesen Bedingungen einverstanden.</p>
+        <h3>1. Geltungsbereich</h3>
+        <p>Diese Nutzungsbedingungen regeln die Nutzung der Website CO₂ Monitor Non-Profit-Organisation (nachfolgend „Website“). Durch den Zugriff und die Nutzung der Website erklären Sie sich mit diesen Bedingungen einverstanden.</p>
 
-    <h3>2. Nutzung der Website</h3>
-    <ul>
-        <li>Die Website dient ausschließlich zu Informationszwecken über CO₂-Emissionen und verwandte Themen.</li>
-        <li>Eine kommerzielle Nutzung der Inhalte ist ohne ausdrückliche Zustimmung der Betreiber nicht gestattet.</li>
-        <li>Die Nutzung erfolgt auf eigene Verantwortung.</li>
-    </ul>
+        <h3>2. Nutzung der Website</h3>
+        <ul>
+            <li>Die Website dient ausschließlich zu Informationszwecken über CO₂-Emissionen und verwandte Themen.</li>
+            <li>Eine kommerzielle Nutzung der Inhalte ist ohne ausdrückliche Zustimmung der Betreiber nicht gestattet.</li>
+            <li>Die Nutzung erfolgt auf eigene Verantwortung.</li>
+        </ul>
 
-    <h3>3. Urheberrecht und geistiges Eigentum</h3>
-    <ul>
-        <li>Alle auf dieser Website veröffentlichten Inhalte (Texte, Bilder, Grafiken, Logos) unterliegen dem Urheberrecht und dürfen nicht ohne Genehmigung verwendet werden.</li>
-        <li>Eine Verbreitung oder kommerzielle Nutzung ist untersagt, es sei denn, sie wurde ausdrücklich erlaubt.</li>
-    </ul>
+        <h3>3. Urheberrecht und geistiges Eigentum</h3>
+        <ul>
+            <li>Alle auf dieser Website veröffentlichten Inhalte (Texte, Bilder, Grafiken, Logos) unterliegen dem Urheberrecht und dürfen nicht ohne Genehmigung verwendet werden.</li>
+            <li>Eine Verbreitung oder kommerzielle Nutzung ist untersagt, es sei denn, sie wurde ausdrücklich erlaubt.</li>
+        </ul>
 
-    <h3>4. Haftungsausschluss</h3>
-    <ul>
-        <li>Wir übernehmen keine Gewähr für die Aktualität, Korrektheit oder Vollständigkeit der bereitgestellten Informationen.</li>
-        <li>Die Nutzung der Website erfolgt auf eigenes Risiko.</li>
-        <li>Wir haften nicht für Schäden, die aus der Nutzung oder Nichtverfügbarkeit der Website entstehen.</li>
-    </ul>
+        <h3>4. Haftungsausschluss</h3>
+        <ul>
+            <li>Wir übernehmen keine Gewähr für die Aktualität, Korrektheit oder Vollständigkeit der bereitgestellten Informationen.</li>
+            <li>Die Nutzung der Website erfolgt auf eigenes Risiko.</li>
+            <li>Wir haften nicht für Schäden, die aus der Nutzung oder Nichtverfügbarkeit der Website entstehen.</li>
+        </ul>
 
-    <h3>5. Externe Links</h3>
-    <ul>
-        <li>Unsere Website kann Links zu externen Seiten enthalten.</li>
-        <li>Wir übernehmen keine Verantwortung für deren Inhalte oder Datenschutzpraktiken.</li>
-    </ul>
+        <h3>5. Externe Links</h3>
+        <ul>
+            <li>Unsere Website kann Links zu externen Seiten enthalten.</li>
+            <li>Wir übernehmen keine Verantwortung für deren Inhalte oder Datenschutzpraktiken.</li>
+        </ul>
 
-    <h3>6. Änderungen der Nutzungsbedingungen</h3>
-    <ul>
-        <li>Wir behalten uns das Recht vor, diese Bedingungen jederzeit zu ändern.</li>
-        <li>Die jeweils aktuelle Version ist auf dieser Seite abrufbar.</li>
-    </ul>
+        <h3>6. Änderungen der Nutzungsbedingungen</h3>
+        <ul>
+            <li>Wir behalten uns das Recht vor, diese Bedingungen jederzeit zu ändern.</li>
+            <li>Die jeweils aktuelle Version ist auf dieser Seite abrufbar.</li>
+        </ul>
 
-    <h3>7. Anwendbares Recht</h3>
-    <p>Diese Nutzungsbedingungen unterliegen dem Recht der Bundesrepublik Deutschland.</p>
+        <h3>7. Anwendbares Recht</h3>
+        <p>Diese Nutzungsbedingungen unterliegen dem Recht der Bundesrepublik Deutschland.</p>
 
-    <h3>8. Kontakt</h3>
-    <p>Für Fragen zu den Nutzungsbedingungen kontaktieren Sie uns bitte unter: E-Mail: kontakt@co2-monitor.org</p>
+        <h3>8. Kontakt</h3>
+        <p>Für Fragen zu den Nutzungsbedingungen kontaktieren Sie uns bitte unter: E-Mail: kontakt@co2-monitor.org</p>
+    </main>
+
+    <footer>
+        <img src="./images/logo_weiss.png" alt="logo">
+        <p>E-Mail: co2-monitor@gmail.com</p>
+        <p>Telefon: +49 123 4567890</p>
+
+        <a href="404page.html"><img src="./images/instagram.png" alt="Instagram Link"></a>
+        <a href="404page.html"><img src="./images/tik-tok.png" alt="TikTok Link"></a>
+        <a href="404page.html"><img src="./images/x.png" alt="X Link"></a>
+
+        <a href="datenschutzrichtlinien.html">Datenschutzrichtlinien</a>
+        <a href="impressum.html">Impressum</a>
+        <a href="nutzungsbedingungen.html">Nutzungsbedingungen</a>
+    </footer>
 </body>
 </html>
