Search in all Columns fix

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
             <table id="emissionTable">
                 <thead>
                     <tr>
-                        <th onclick="sortByCountry(0)">Land</th>
-                        <th onclick="sortByCountry(1)">Unternehmen</th>
-                        <th onclick="sortByCountry(2)">CO₂-Emissionen (Tonnen)</th>
-                        <th onclick="sortByCountry(3)">Branche</th>
+                        <th onclick="sort(0)">Land</th>
+                        <th onclick="sort(1)">Unternehmen</th>
+                        <th onclick="sort(2)">CO₂-Emissionen (Tonnen)</th>
+                        <th onclick="sort(3)">Branche</th>
                     </tr>
                 </thead>
                 <tbody>
