--- a/index.html
+++ b/index.html
@@ -270,8 +270,8 @@
 
           <footer>
             <div class="footer-content">
-              <img src="./images/logo_weiss.png" class="footer-logo" alt="logo">
               <div class="footer-contact">
+                <img src="./images/Logo_black.png" class="footer-logo" alt="logo">
                 <p>E-Mail: co2-monitor@gmail.com</p>
                 <p>Telefon: +49 123 4567890</p>
               </div>
