--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           </div>
           
           <div class="container mt-5">
-            <table id="emissionTable" class="table mx-auto" style="max-width: 1130px;">
+            <table id="emissionTable" class="table mx-auto table-responsive" style="max-width: 1130px;">
               <thead>
                 <tr>
                   <th onclick="sort(0)">Land</th>
